tests/snapshots/snapshots__snapshot_arrays_explode.snap
---
source: tests/snapshots.rs
expression: stats
---
{
  "keys_count": {
    "$.id": 15,
    "$.nested[0][0]": 1,
    "$.nested[0][1]": 1,
    "$.nested[1][0]": 1,
    "$.nested[1][1]": 1,
    "$.scores[0]": 2,
    "$.scores[1]": 2,
    "$.scores[2]": 2,
    "$.tags[0]": 6,
    "$.tags[1]": 4,
    "$.tags[2]": 2,
    "$.matrix[0][0]": 2,
    "$.matrix[0][1]": 2,
    "$.matrix[1][0]": 2,
    "$.matrix[1][1]": 2,
    "$.flags[0]": 2,
    "$.flags[1]": 2,
    "$.flags[2]": 1,
    "$.items[0].name": 3,
    "$.items[0].value": 2,
    "$.items[1].name": 3,
    "$.items[1].value": 2,
    "$.data[0]": 1,
    "$.long_array[0]": 1,
    "$.long_array[1]": 1,
    "$.long_array[2]": 1,
    "$.long_array[3]": 1,
    "$.long_array[4]": 1,
    "$.long_array[5]": 1,
    "$.long_array[6]": 1,
    "$.long_array[7]": 1,
    "$.long_array[8]": 1,
    "$.long_array[9]": 1,
    "$.long_array[10]": 1,
    "$.long_array[11]": 1,
    "$.long_array[12]": 1,
    "$.long_array[13]": 1,
    "$.long_array[14]": 1,
    "$.items[0].meta.type": 1,
    "$.nested_deep[0][0][0]": 1,
    "$.nested_deep[0][0][1]": 1,
    "$.nested_deep[0][1][0]": 1,
    "$.nested_deep[1][0][0]": 1,
    "$.nested_deep[1][0][1]": 1,
    "$.mixed[0]": 1,
    "$.mixed[1]": 1,
    "$.mixed[2]": 1,
    "$.mixed[3]": 1,
    "$.mixed[4].key": 1,
    "$.counts[0]": 1,
    "$.counts[1]": 1,
    "$.counts[2]": 1,
    "$.tags[3]": 1,
    "$.data[0][0].id": 1,
    "$.data[0][0].v": 1,
    "$.data[0][1].id": 1,
    "$.data[0][1].v": 1,
    "$.data[1][0].id": 1,
    "$.data[1][0].v": 1,
    "$.matrix[0][2]": 1,
    "$.matrix[1][2]": 1,
    "$.matrix[2][0]": 1,
    "$.matrix[2][1]": 1,
    "$.matrix[2][2]": 1,
    "$.items[0].tags[0]": 1,
    "$.items[0].tags[1]": 1,
    "$.items[1].tags[0]": 1,
    "$.values[0]": 1,
    "$.values[1]": 1,
    "$.values[2]": 1,
    "$.values[3]": 1,
    "$.values[4]": 1,
    "$.nested_objects[0].a": 1,
    "$.nested_objects[0].b": 1,
    "$.nested_objects[1].c": 1
  },
  "line_count": 15,
  "bad_lines": [],
  "keys_types_count": {
    "$.id::Number": 15,
    "$.nested[0][0]::Number": 1,
    "$.nested[0][1]::Number": 1,
    "$.nested[1][0]::Number": 1,
    "$.nested[1][1]::Number": 1,
    "$.scores[0]::Number": 2,
    "$.scores[1]::Number": 2,
    "$.scores[2]::Number": 2,
    "$.tags[0]::String": 6,
    "$.tags[1]::String": 4,
    "$.tags[2]::String": 2,
    "$.matrix[0][0]::Number": 2,
    "$.matrix[0][1]::Number": 2,
    "$.matrix[1][0]::Number": 2,
    "$.matrix[1][1]::Number": 2,
    "$.flags[0]::Bool": 2,
    "$.flags[1]::Bool": 2,
    "$.flags[2]::Bool": 1,
    "$.items[0].name::String": 3,
    "$.items[0].value::Number": 2,
    "$.items[1].name::String": 3,
    "$.items[1].value::Number": 2,
    "$.data[0]::Number": 1,
    "$.long_array[0]::Number": 1,
    "$.long_array[1]::Number": 1,
    "$.long_array[2]::Number": 1,
    "$.long_array[3]::Number": 1,
    "$.long_array[4]::Number": 1,
    "$.long_array[5]::Number": 1,
    "$.long_array[6]::Number": 1,
    "$.long_array[7]::Number": 1,
    "$.long_array[8]::Number": 1,
    "$.long_array[9]::Number": 1,
    "$.long_array[10]::Number": 1,
    "$.long_array[11]::Number": 1,
    "$.long_array[12]::Number": 1,
    "$.long_array[13]::Number": 1,
    "$.long_array[14]::Number": 1,
    "$.items[0].meta.type::String": 1,
    "$.nested_deep[0][0][0]::Number": 1,
    "$.nested_deep[0][0][1]::Number": 1,
    "$.nested_deep[0][1][0]::Number": 1,
    "$.nested_deep[1][0][0]::Number": 1,
    "$.nested_deep[1][0][1]::Number": 1,
    "$.mixed[0]::Number": 1,
    "$.mixed[1]::String": 1,
    "$.mixed[2]::Bool": 1,
    "$.mixed[3]::Null": 1,
    "$.mixed[4].key::String": 1,
    "$.counts[0]::Number": 1,
    "$.counts[1]::Number": 1,
    "$.counts[2]::Number": 1,
    "$.tags[3]::String": 1,
    "$.data[0][0].id::Number": 1,
    "$.data[0][0].v::String": 1,
    "$.data[0][1].id::Number": 1,
    "$.data[0][1].v::String": 1,
    "$.data[1][0].id::Number": 1,
    "$.data[1][0].v::String": 1,
    "$.matrix[0][2]::Number": 1,
    "$.matrix[1][2]::Number": 1,
    "$.matrix[2][0]::Number": 1,
    "$.matrix[2][1]::Number": 1,
    "$.matrix[2][2]::Number": 1,
    "$.items[0].tags[0]::String": 1,
    "$.items[0].tags[1]::String": 1,
    "$.items[1].tags[0]::String": 1,
    "$.values[0]::Null": 1,
    "$.values[1]::Null": 1,
    "$.values[2]::Number": 1,
    "$.values[3]::Number": 1,
    "$.values[4]::Null": 1,
    "$.nested_objects[0].a::Number": 1,
    "$.nested_objects[0].b::Number": 1,
    "$.nested_objects[1].c::Number": 1
  },
  "empty_lines": []
}
